Interpreter/.antlr/MSqlParser.cpp

// Generated from d:\University\sophomore\Lower\DataBase\Lab\MiniSQL\ours\Interpreter\MSqlParser.g4 by ANTLR 4.8



#include "MSqlParser.h"


using namespace antlrcpp;
using namespace antlr4;

MSqlParser::MSqlParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MSqlParser::~MSqlParser() {
  delete _interpreter;
}

std::string MSqlParser::getGrammarFileName() const {
  return "MSqlParser.g4";
}

const std::vector<std::string>& MSqlParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MSqlParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- SqlStatementsContext ------------------------------------------------------------------

MSqlParser::SqlStatementsContext::SqlStatementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MSqlParser::CreateTableContext* MSqlParser::SqlStatementsContext::createTable() {
  return getRuleContext<MSqlParser::CreateTableContext>(0);
}

MSqlParser::CreateIndexContext* MSqlParser::SqlStatementsContext::createIndex() {
  return getRuleContext<MSqlParser::CreateIndexContext>(0);
}

MSqlParser::DropTableContext* MSqlParser::SqlStatementsContext::dropTable() {
  return getRuleContext<MSqlParser::DropTableContext>(0);
}

MSqlParser::DropIndexContext* MSqlParser::SqlStatementsContext::dropIndex() {
  return getRuleContext<MSqlParser::DropIndexContext>(0);
}

MSqlParser::InsertStatementContext* MSqlParser::SqlStatementsContext::insertStatement() {
  return getRuleContext<MSqlParser::InsertStatementContext>(0);
}

MSqlParser::DeleteStatementContext* MSqlParser::SqlStatementsContext::deleteStatement() {
  return getRuleContext<MSqlParser::DeleteStatementContext>(0);
}

MSqlParser::SelectStatementContext* MSqlParser::SqlStatementsContext::selectStatement() {
  return getRuleContext<MSqlParser::SelectStatementContext>(0);
}


size_t MSqlParser::SqlStatementsContext::getRuleIndex() const {
  return MSqlParser::RuleSqlStatements;
}


MSqlParser::SqlStatementsContext* MSqlParser::sqlStatements() {
  SqlStatementsContext *_localctx = _tracker.createInstance<SqlStatementsContext>(_ctx, getState());
  enterRule(_localctx, 0, MSqlParser::RuleSqlStatements);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(141);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(134);
      createTable();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(135);
      createIndex();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(136);
      dropTable();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(137);
      dropIndex();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(138);
      insertStatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(139);
      deleteStatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(140);
      selectStatement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateTableContext ------------------------------------------------------------------

MSqlParser::CreateTableContext::CreateTableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MSqlParser::CreateTableContext::CREATE() {
  return getToken(MSqlParser::CREATE, 0);
}

tree::TerminalNode* MSqlParser::CreateTableContext::TABLE() {
  return getToken(MSqlParser::TABLE, 0);
}

MSqlParser::TableNameContext* MSqlParser::CreateTableContext::tableName() {
  return getRuleContext<MSqlParser::TableNameContext>(0);
}

tree::TerminalNode* MSqlParser::CreateTableContext::SEMI() {
  return getToken(MSqlParser::SEMI, 0);
}

MSqlParser::CreateDefinitionsContext* MSqlParser::CreateTableContext::createDefinitions() {
  return getRuleContext<MSqlParser::CreateDefinitionsContext>(0);
}


size_t MSqlParser::CreateTableContext::getRuleIndex() const {
  return MSqlParser::RuleCreateTable;
}


MSqlParser::CreateTableContext* MSqlParser::createTable() {
  CreateTableContext *_localctx = _tracker.createInstance<CreateTableContext>(_ctx, getState());
  enterRule(_localctx, 2, MSqlParser::RuleCreateTable);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(143);
    match(MSqlParser::CREATE);
    setState(144);
    match(MSqlParser::TABLE);
    setState(145);
    tableName();
    setState(147);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MSqlParser::LR_BRACKET) {
      setState(146);
      createDefinitions();
    }
    setState(149);
    match(MSqlParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateDefinitionsContext ------------------------------------------------------------------

MSqlParser::CreateDefinitionsContext::CreateDefinitionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MSqlParser::CreateDefinitionsContext::LR_BRACKET() {
  return getToken(MSqlParser::LR_BRACKET, 0);
}

std::vector<MSqlParser::CreateDefinitionContext *> MSqlParser::CreateDefinitionsContext::createDefinition() {
  return getRuleContexts<MSqlParser::CreateDefinitionContext>();
}

MSqlParser::CreateDefinitionContext* MSqlParser::CreateDefinitionsContext::createDefinition(size_t i) {
  return getRuleContext<MSqlParser::CreateDefinitionContext>(i);
}

tree::TerminalNode* MSqlParser::CreateDefinitionsContext::RR_BRACKET() {
  return getToken(MSqlParser::RR_BRACKET, 0);
}

std::vector<tree::TerminalNode *> MSqlParser::CreateDefinitionsContext::COMMA() {
  return getTokens(MSqlParser::COMMA);
}

tree::TerminalNode* MSqlParser::CreateDefinitionsContext::COMMA(size_t i) {
  return getToken(MSqlParser::COMMA, i);
}


size_t MSqlParser::CreateDefinitionsContext::getRuleIndex() const {
  return MSqlParser::RuleCreateDefinitions;
}


MSqlParser::CreateDefinitionsContext* MSqlParser::createDefinitions() {
  CreateDefinitionsContext *_localctx = _tracker.createInstance<CreateDefinitionsContext>(_ctx, getState());
  enterRule(_localctx, 4, MSqlParser::RuleCreateDefinitions);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(151);
    match(MSqlParser::LR_BRACKET);
    setState(152);
    createDefinition();
    setState(157);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MSqlParser::COMMA) {
      setState(153);
      match(MSqlParser::COMMA);
      setState(154);
      createDefinition();
      setState(159);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(160);
    match(MSqlParser::RR_BRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateDefinitionContext ------------------------------------------------------------------

MSqlParser::CreateDefinitionContext::CreateDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MSqlParser::CreateDefinitionContext::getRuleIndex() const {
  return MSqlParser::RuleCreateDefinition;
}

void MSqlParser::CreateDefinitionContext::copyFrom(CreateDefinitionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ColumnDeclarationContext ------------------------------------------------------------------

MSqlParser::UidContext* MSqlParser::ColumnDeclarationContext::uid() {
  return getRuleContext<MSqlParser::UidContext>(0);
}

MSqlParser::ColumnDefinitionContext* MSqlParser::ColumnDeclarationContext::columnDefinition() {
  return getRuleContext<MSqlParser::ColumnDefinitionContext>(0);
}

MSqlParser::ColumnDeclarationContext::ColumnDeclarationContext(CreateDefinitionContext *ctx) { copyFrom(ctx); }


//----------------- ConstraintDeclarationContext ------------------------------------------------------------------

MSqlParser::TableConstraintContext* MSqlParser::ConstraintDeclarationContext::tableConstraint() {
  return getRuleContext<MSqlParser::TableConstraintContext>(0);
}

MSqlParser::ConstraintDeclarationContext::ConstraintDeclarationContext(CreateDefinitionContext *ctx) { copyFrom(ctx); }


MSqlParser::CreateDefinitionContext* MSqlParser::createDefinition() {
  CreateDefinitionContext *_localctx = _tracker.createInstance<CreateDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 6, MSqlParser::RuleCreateDefinition);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(166);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MSqlParser::ID: {
        _localctx = dynamic_cast<CreateDefinitionContext *>(_tracker.createInstance<MSqlParser::ColumnDeclarationContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(162);
        uid();
        setState(163);
        columnDefinition();
        break;
      }

      case MSqlParser::CONSTRAINT:
      case MSqlParser::PRIMARY:
      case MSqlParser::CHECK:
      case MSqlParser::UNIQUE:
      case MSqlParser::RR_BRACKET:
      case MSqlParser::COMMA: {
        _localctx = dynamic_cast<CreateDefinitionContext *>(_tracker.createInstance<MSqlParser::ConstraintDeclarationContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(165);
        tableConstraint();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ColumnDefinitionContext ------------------------------------------------------------------

MSqlParser::ColumnDefinitionContext::ColumnDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MSqlParser::DataTypeContext* MSqlParser::ColumnDefinitionContext::dataType() {
  return getRuleContext<MSqlParser::DataTypeContext>(0);
}

std::vector<MSqlParser::ColumnConstraintContext *> MSqlParser::ColumnDefinitionContext::columnConstraint() {
  return getRuleContexts<MSqlParser::ColumnConstraintContext>();
}

MSqlParser::ColumnConstraintContext* MSqlParser::ColumnDefinitionContext::columnConstraint(size_t i) {
  return getRuleContext<MSqlParser::ColumnConstraintContext>(i);
}


size_t MSqlParser::ColumnDefinitionContext::getRuleIndex() const {
  return MSqlParser::RuleColumnDefinition;
}


MSqlParser::ColumnDefinitionContext* MSqlParser::columnDefinition() {
  ColumnDefinitionContext *_localctx = _tracker.createInstance<ColumnDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 8, MSqlParser::RuleColumnDefinition);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(168);
    dataType();
    setState(172);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MSqlParser::NOT)
      | (1ULL << MSqlParser::CONSTRAINT)
      | (1ULL << MSqlParser::PRIMARY)
      | (1ULL << MSqlParser::KEY)
      | (1ULL << MSqlParser::DEFAULT)
      | (1ULL << MSqlParser::CHECK)
      | (1ULL << MSqlParser::NULL_LITERAL)
      | (1ULL << MSqlParser::UNIQUE))) != 0) || _la == MSqlParser::NULL_SPEC_LITERAL) {
      setState(169);
      columnConstraint();
      setState(174);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DataTypeContext ------------------------------------------------------------------

MSqlParser::DataTypeContext::DataTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MSqlParser::DataTypeContext::CHAR() {
  return getToken(MSqlParser::CHAR, 0);
}

MSqlParser::LengthOneDimensionContext* MSqlParser::DataTypeContext::lengthOneDimension() {
  return getRuleContext<MSqlParser::LengthOneDimensionContext>(0);
}

tree::TerminalNode* MSqlParser::DataTypeContext::INT() {
  return getToken(MSqlParser::INT, 0);
}

tree::TerminalNode* MSqlParser::DataTypeContext::ZEROFILL() {
  return getToken(MSqlParser::ZEROFILL, 0);
}

tree::TerminalNode* MSqlParser::DataTypeContext::SIGNED() {
  return getToken(MSqlParser::SIGNED, 0);
}

tree::TerminalNode* MSqlParser::DataTypeContext::UNSIGNED() {
  return getToken(MSqlParser::UNSIGNED, 0);
}

tree::TerminalNode* MSqlParser::DataTypeContext::FLOAT() {
  return getToken(MSqlParser::FLOAT, 0);
}

MSqlParser::LengthTwoOptionalDimensionContext* MSqlParser::DataTypeContext::lengthTwoOptionalDimension() {
  return getRuleContext<MSqlParser::LengthTwoOptionalDimensionContext>(0);
}


size_t MSqlParser::DataTypeContext::getRuleIndex() const {
  return MSqlParser::RuleDataType;
}


MSqlParser::DataTypeContext* MSqlParser::dataType() {
  DataTypeContext *_localctx = _tracker.createInstance<DataTypeContext>(_ctx, getState());
  enterRule(_localctx, 10, MSqlParser::RuleDataType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(199);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MSqlParser::CHAR: {
        enterOuterAlt(_localctx, 1);
        setState(175);
        match(MSqlParser::CHAR);
        setState(177);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MSqlParser::LR_BRACKET) {
          setState(176);
          lengthOneDimension();
        }
        break;
      }

      case MSqlParser::INT: {
        enterOuterAlt(_localctx, 2);
        setState(179);
        match(MSqlParser::INT);
        setState(181);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MSqlParser::LR_BRACKET) {
          setState(180);
          lengthOneDimension();
        }
        setState(184);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MSqlParser::SIGNED

        || _la == MSqlParser::UNSIGNED) {
          setState(183);
          _la = _input->LA(1);
          if (!(_la == MSqlParser::SIGNED

          || _la == MSqlParser::UNSIGNED)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
        }
        setState(187);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MSqlParser::ZEROFILL) {
          setState(186);
          match(MSqlParser::ZEROFILL);
        }
        break;
      }

      case MSqlParser::FLOAT: {
        enterOuterAlt(_localctx, 3);
        setState(189);
        match(MSqlParser::FLOAT);
        setState(191);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MSqlParser::LR_BRACKET) {
          setState(190);
          lengthTwoOptionalDimension();
        }
        setState(194);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MSqlParser::SIGNED

        || _la == MSqlParser::UNSIGNED) {
          setState(193);
          _la = _input->LA(1);
          if (!(_la == MSqlParser::SIGNED

          || _la == MSqlParser::UNSIGNED)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
        }
        setState(197);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MSqlParser::ZEROFILL) {
          setState(196);
          match(MSqlParser::ZEROFILL);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LengthOneDimensionContext ------------------------------------------------------------------

MSqlParser::LengthOneDimensionContext::LengthOneDimensionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MSqlParser::LengthOneDimensionContext::LR_BRACKET() {
  return getToken(MSqlParser::LR_BRACKET, 0);
}

MSqlParser::DecimalLiteralContext* MSqlParser::LengthOneDimensionContext::decimalLiteral() {
  return getRuleContext<MSqlParser::DecimalLiteralContext>(0);
}

tree::TerminalNode* MSqlParser::LengthOneDimensionContext::RR_BRACKET() {
  return getToken(MSqlParser::RR_BRACKET, 0);
}


size_t MSqlParser::LengthOneDimensionContext::getRuleIndex() const {
  return MSqlParser::RuleLengthOneDimension;
}


MSqlParser::LengthOneDimensionContext* MSqlParser::lengthOneDimension() {
  LengthOneDimensionContext *_localctx = _tracker.createInstance<LengthOneDimensionContext>(_ctx, getState());
  enterRule(_localctx, 12, MSqlParser::RuleLengthOneDimension);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(201);
    match(MSqlParser::LR_BRACKET);
    setState(202);
    decimalLiteral();
    setState(203);
    match(MSqlParser::RR_BRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LengthTwoOptionalDimensionContext ------------------------------------------------------------------

MSqlParser::LengthTwoOptionalDimensionContext::LengthTwoOptionalDimensionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MSqlParser::LengthTwoOptionalDimensionContext::LR_BRACKET() {
  return getToken(MSqlParser::LR_BRACKET, 0);
}

std::vector<MSqlParser::DecimalLiteralContext *> MSqlParser::LengthTwoOptionalDimensionContext::decimalLiteral() {
  return getRuleContexts<MSqlParser::DecimalLiteralContext>();
}

MSqlParser::DecimalLiteralContext* MSqlParser::LengthTwoOptionalDimensionContext::decimalLiteral(size_t i) {
  return getRuleContext<MSqlParser::DecimalLiteralContext>(i);
}

tree::TerminalNode* MSqlParser::LengthTwoOptionalDimensionContext::COMMA() {
  return getToken(MSqlParser::COMMA, 0);
}

tree::TerminalNode* MSqlParser::LengthTwoOptionalDimensionContext::RR_BRACKET() {
  return getToken(MSqlParser::RR_BRACKET, 0);
}


size_t MSqlParser::LengthTwoOptionalDimensionContext::getRuleIndex() const {
  return MSqlParser::RuleLengthTwoOptionalDimension;
}


MSqlParser::LengthTwoOptionalDimensionContext* MSqlParser::lengthTwoOptionalDimension() {
  LengthTwoOptionalDimensionContext *_localctx = _tracker.createInstance<LengthTwoOptionalDimensionContext>(_ctx, getState());
  enterRule(_localctx, 14, MSqlParser::RuleLengthTwoOptionalDimension);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(205);
    match(MSqlParser::LR_BRACKET);
    setState(206);
    decimalLiteral();
    setState(207);
    match(MSqlParser::COMMA);
    setState(208);
    decimalLiteral();
    setState(209);
    match(MSqlParser::RR_BRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ColumnConstraintContext ------------------------------------------------------------------

MSqlParser::ColumnConstraintContext::ColumnConstraintContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MSqlParser::ColumnConstraintContext::getRuleIndex() const {
  return MSqlParser::RuleColumnConstraint;
}

void MSqlParser::ColumnConstraintContext::copyFrom(ColumnConstraintContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- PrimaryKeyColumnConstraintContext ------------------------------------------------------------------

tree::TerminalNode* MSqlParser::PrimaryKeyColumnConstraintContext::KEY() {
  return getToken(MSqlParser::KEY, 0);
}

tree::TerminalNode* MSqlParser::PrimaryKeyColumnConstraintContext::PRIMARY() {
  return getToken(MSqlParser::PRIMARY, 0);
}

MSqlParser::PrimaryKeyColumnConstraintContext::PrimaryKeyColumnConstraintContext(ColumnConstraintContext *ctx) { copyFrom(ctx); }


//----------------- CheckColumnConstraintContext ------------------------------------------------------------------

tree::TerminalNode* MSqlParser::CheckColumnConstraintContext::CHECK() {
  return getToken(MSqlParser::CHECK, 0);
}

tree::TerminalNode* MSqlParser::CheckColumnConstraintContext::LR_BRACKET() {
  return getToken(MSqlParser::LR_BRACKET, 0);
}

MSqlParser::ExpressionContext* MSqlParser::CheckColumnConstraintContext::expression() {
  return getRuleContext<MSqlParser::ExpressionContext>(0);
}

tree::TerminalNode* MSqlParser::CheckColumnConstraintContext::RR_BRACKET() {
  return getToken(MSqlParser::RR_BRACKET, 0);
}

tree::TerminalNode* MSqlParser::CheckColumnConstraintContext::CONSTRAINT() {
  return getToken(MSqlParser::CONSTRAINT, 0);
}

MSqlParser::UidContext* MSqlParser::CheckColumnConstraintContext::uid() {
  return getRuleContext<MSqlParser::UidContext>(0);
}

MSqlParser::CheckColumnConstraintContext::CheckColumnConstraintContext(ColumnConstraintContext *ctx) { copyFrom(ctx); }


//----------------- UniqueKeyColumnConstraintContext ------------------------------------------------------------------

tree::TerminalNode* MSqlParser::UniqueKeyColumnConstraintContext::UNIQUE() {
  return getToken(MSqlParser::UNIQUE, 0);
}

tree::TerminalNode* MSqlParser::UniqueKeyColumnConstraintContext::KEY() {
  return getToken(MSqlParser::KEY, 0);
}

MSqlParser::UniqueKeyColumnConstraintContext::UniqueKeyColumnConstraintContext(ColumnConstraintContext *ctx) { copyFrom(ctx); }


//----------------- NullColumnConstraintContext ------------------------------------------------------------------

MSqlParser::NullNotnullContext* MSqlParser::NullColumnConstraintContext::nullNotnull() {
  return getRuleContext<MSqlParser::NullNotnullContext>(0);
}

MSqlParser::NullColumnConstraintContext::NullColumnConstraintContext(ColumnConstraintContext *ctx) { copyFrom(ctx); }


//----------------- DefaultColumnConstraintContext ------------------------------------------------------------------

